Fixed comment box positioning, resized posts, fixed position toggle, issue with navbar position (disappears behind)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -125,6 +125,7 @@
   top: 10px;
 
 
+
 }
 
 #logo {
@@ -156,6 +157,7 @@
   top: 0;
   right: 10px;
   width: 50%;
+  z-index: 999;
 }
 
 #navbar li {
