--- a/app/assets/stylesheets/post.scss
+++ b/app/assets/stylesheets/post.scss
@@ -53,10 +53,10 @@
 // Day State
 /////////////////////////////////////////////////
 .toggle {
-  position: relative;
+  position: fixed;
   display: inline-block;
   width: 100px;
-  margin-left: 100px;
+  margin-left: 35px;
   padding: 4px;
   border-radius: 40px;
 }
@@ -188,6 +188,7 @@
   font-size: large;
   font-weight: bold;
   text-align: left;
+  vertical-align:top ;
   .post-avatar {
     display:inline-block;
     width: 40px;
@@ -195,13 +196,13 @@
     margin-right: 8px;
     border-radius:50%;
     border: 1px solid #efefef;
-    position:static, bottom; 
+    position:static, top; 
   }
 
   .poster-name-link {
     display:inline-block;
     margin-right:0px;
-    vertical-align: 50%;
+    vertical-align: 10px;
     font-size: larger;
   }
 
@@ -215,7 +216,7 @@
 }
 
 .card {
-  width: 280px;
+  width: 725px;
   height: 360px;
   border-radius: 15px;
   padding: 1.5rem;
@@ -225,6 +226,14 @@
   align-items: flex-end;
   transition: 0.4s ease-out;
   box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
+  z-index: 3;
+
+  .comments-form {
+    z-index: 4;
+  }
+  .likes {
+    z-index: 4;
+  }
 }
 .card:hover {
   transform: translateY(20px);
@@ -250,7 +259,7 @@
   transition: 0.5s;
   opacity: 0;
 }
-.card img {
+.card #postcontent {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -275,19 +284,4 @@
   letter-spacing: 1px;
   font-size: 15px;
   margin-top: 8px;
-}
-.card .info button {
-  padding: 0.6rem;
-  outline: none;
-  border: none;
-  border-radius: 3px;
-  background: white;
-  color: black;
-  font-weight: bold;
-  cursor: pointer;
-  transition: 0.4s ease;
-}
-.card .info button:hover {
-  background: dodgerblue;
-  color: white;
 }
